feat: 코드래빗 리뷰 반영 ()

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Servers/
 ### Context / DB Config ###
 context.xml
 **/META-INF/context.xml
+src/main/webapp/META-INF/context.xml
+**/application.properties
 
 ### OS ###
 .DS_Store
