--- a/.github/workflows/issue-branch.yml
+++ b/.github/workflows/issue-branch.yml
@@ -2,7 +2,8 @@ name: Create Issue Branch
 
 on:
   issues:
-    types: [assigned]
+    # 이슈가 열리거나, 라벨이 붙거나, 담당자가 지정될 때 모두 실행
+    types: [opened, labeled, assigned]
 
 jobs:
   create_issue_branch_job:
