--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,30 @@
   	<res-type>javax.sql.DataSource</res-type>
  	<res-auth>Container</res-auth>
   </resource-ref>
+
+<filter>
+    <filter-name>jwtAuthFilter</filter-name>
+    <filter-class>jwtLogin.filter.JwtLoginFilter</filter-class>
+</filter>
+
+<filter-mapping>
+    <filter-name>jwtAuthFilter</filter-name>
+    <url-pattern>/room</url-pattern>
+</filter-mapping>
+
+<filter-mapping>
+    <filter-name>jwtAuthFilter</filter-name>
+    <url-pattern>/room/*</url-pattern>
+</filter-mapping>
+
+<filter-mapping>
+    <filter-name>jwtAuthFilter</filter-name>
+    <url-pattern>/game</url-pattern>
+</filter-mapping>
+
+<filter-mapping>
+    <filter-name>jwtAuthFilter</filter-name>
+    <url-pattern>/game/*</url-pattern>
+</filter-mapping>
+
 </web-app>
